新增 - 载货量上报前端页面; 优化 - 载货量上报后端服务逻辑；前端显示。

--- a/ui/index.html
+++ b/ui/index.html
@@ -204,13 +204,13 @@
                     </div>
                 </div>
             </div>
-			<div class="visual_box record_box">
+			<div class="visual_box">
 				<div class="visual_title">
 					<span>飞行记录</span>
 					<img src="images/ksh33.png">
 				</div>
-				<div id="flight-records-list"></div>
-				<div id="flight-records-pagination" style="font-size: 4px;"></div>
+				<div class="record_box" id="flight-records-list"></div>
+				<div id="flight-records-pagination" style="font-size: 16px;"></div>
 			</div>
 		</div>
 		<div class="clear"></div>
